directory browse disabled

--- a/GKMetroWeb/Web.config
+++ b/GKMetroWeb/Web.config
@@ -3,7 +3,7 @@
 
   <location path="App_UI">
     <system.webServer>
-      <directoryBrowse enabled="true" />
+      <directoryBrowse enabled="false" />
     </system.webServer>
   </location>
   
