--- a/GKMetroWeb/Web.config
+++ b/GKMetroWeb/Web.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0"?>
 <configuration>
 
-  <location path="App_UI">
+  <location path="docs">
     <system.webServer>
       <directoryBrowse enabled="true" />
     </system.webServer>
