--- a/GKMetroWeb/Web.config
+++ b/GKMetroWeb/Web.config
@@ -4,6 +4,9 @@
   <location path="docs">
     <system.webServer>
       <directoryBrowse enabled="true" />
+      <!--<staticContent>
+        <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="365.00:00:00" />
+      </staticContent>-->
     </system.webServer>
   </location>
   
